--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -225,4 +225,5 @@ limitations under the License. -->
   <string name="update">Aktualisieren</string>
   <string name="standard_portfolio">Standard Portfolio</string>
   <string name="menu_portfolio_title">Portfolio auswählen</string>
+  <string name="portfolio_header">Portfolio</string>
 </resources>
