--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -129,6 +129,13 @@ limitations under the License. -->
   <string name="delete_all_assets">Alle Aktien entfernen</string>
   <string name="delete_all_assets_msg">Alle Aktien wurden aus Ihrem Aktienbestand entfernt.</string>
   <string name="delete_all_assets_confirm">Sind Sie sicher, dass Sie alle Aktien von \'%1$s\' aus Ihrem Aktienbestand entfernen möchten?</string>
+  <string name="split">Split</string>
+  <string name="split_asset">Aktiensplit</string>
+  <string name="split_asset_help">z.B. Aktiensplitverhältnis 1:2 bedeuted für jede Aktie bekommt man 2 Aktien zum halben Preis.</string>
+  <string name="split_ratio">Aktiensplit\nVerhältnis 1:n</string>
+  <string name="invalid_split_entry">Das Aktiensplitverhältnis muss größer als 0 und kleiner oder gleich 20 sein.</string>
+  <string name="split_min_price">Das Aktiensplitverhältnis würde in einen zu kleinen Preis resultieren.</string>
+  <string name="split_min_shares">Das Aktiensplitverhältnis würde in einer zu kleinen Aktienanzahl resultieren.</string>
   <string name="asset_summary_text">Gesamtaktienbestand</string>
   <string name="title_activity_add">Aktien hinzufügen</string>
   <string name="title_activity_stockdata">Aktiendetails</string>
