--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -93,6 +93,7 @@ limitations under the License. -->
   <string name="alert_above_notification">Die Aktie %1$s, %2$s, ist jetzt über %3$s bei %4$s.</string>
   <string name="alert_below_notification">Die Aktie %1$s, %2$s, ist jetzt unter %3$s bei %4$s.</string>
   <string name="enable_notifications">Benachrichtigungen zulassen</string>
+  <string name="enable_notifications_desc">Legt fest, ob Benachrichtigungen angezeigt werden.</string>
   <string name="add">Hinzufügen</string>
   <string name="update_notes">Anmerkungen aktualisieren</string>
   <string name="invalid_number">Ungültige Eingabe</string>
