--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -242,4 +242,11 @@ limitations under the License. -->
   <string name="portfolio_name_text">Portfolio name</string>
   <string name="portfolio_name_not_empty">Geben Sie einen Portfolionamen ein.</string>
   <string name="portfolio_rename_text">Neuer Portfolio name</string>
+  <string name="dividend">Dividende</string>
+  <string name="dividend_received">Dividend received</string>
+  <string name="dividend_announced">Dividend announced</string>
+  <string name="dividend_date">Pay Date</string>
+  <string name="add_dividend">Add Dividend</string>
+  <string name="dividend_added">Dividend added.</string>
+  <string name="update_dividend">Update dividend</string>
 </resources>
