--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -260,4 +260,7 @@ limitations under the License. -->
   <string name="dividend_received_summary_text">Gesamtdividendenbetrag</string>
   <string name="dividend_headline">Dividende</string>
   <string name="dividend_exdate">Ex-Dividend</string>
+  <string name="totaldividend_payed">Ausgezahlte Dividende</string>
+  <string name="totaldividend_payedYTD">Ausgezahlte Dividende YTD</string>
+  <string name="no_online_dividend_data">Keine online Dividendendaten</string>
 </resources>
