lint, postmarket italics

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -277,7 +277,7 @@ limitations under the License. -->
   <string name="reset_portfolios_title">Reset Portfolios</string>
   <string name="reset_portfolios_desc">Reset all Portfolios back to the Standard Portfolio.</string>
   <string name="reset_portfolios_confirm">Are you sure to reset all Portfolios back to the Standard Portfolio?</string>
-  <string name="reset">Zurücksetzen</string>
+  <string name="reset">Reset</string>
   <string name="dividend_cycle">Dividend Cycle</string>
   <string name="dividend_updated">Dividend updated.</string>
 </resources>
