--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -272,7 +272,7 @@ limitations under the License. -->
   <string name="dividend_exdate">Ex-Dividend</string>
   <string name="totaldividend_payed">Ausgezahlte Dividende</string>
   <string name="totaldividend_payedYTD">Ausgezahlte Dividende YTD</string>
-  <string name="no_online_dividend_data">Keine online Dividendendaten</string>
+  <string name="no_dividend_data">Keine Dividendendaten vorhanden.</string>
   <string name="reset_portfolios_title">Portfolios zurücksetzen</string>
   <string name="reset_portfolios_desc">Setzt alle Portfolios zum Standard-Portfolio zurück.</string>
   <string name="reset_portfolios_confirm">Sind Sie sich sicher, dass Sie alle Portfolios zum Standard-Portfolio zurücksetzen wollen?</string>
